--- a/BlockLoader/Properties/Resources.cs.resx
+++ b/BlockLoader/Properties/Resources.cs.resx
@@ -144,4 +144,7 @@
   <data name="CalculateReaches" xml:space="preserve">
     <value>Spočítat sledovanosti</value>
   </data>
+  <data name="ErrorCalculatingReaches" xml:space="preserve">
+    <value>Nastala okurka během počítání reachů.</value>
+  </data>
 </root>
