--- a/BlockLoader/Properties/Resources.cs.resx
+++ b/BlockLoader/Properties/Resources.cs.resx
@@ -147,4 +147,7 @@
   <data name="ErrorCalculatingReaches" xml:space="preserve">
     <value>Nastala okurka během počítání reachů.</value>
   </data>
+  <data name="Reach" xml:space="preserve">
+    <value>Zásah</value>
+  </data>
 </root>
